// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup renders correctly 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-r0p235-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-r0p235-RadioContainer[aria-disabled='false'],
.cache-r0p235-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-r0p235-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-r0p235-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-r0p235-RadioContainer[aria-disabled='true']>label,
.cache-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.cache-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="cache-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="cache-103llo5-FieldSet e15shfap1"
    >
      <div
        class="cache-oey408-Stack ehpbis70"
      >
        <legend
          class="cache-zvclys-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="cache-gw33n2-Stack ehpbis70"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              aria-disabled="false"
              class="cache-r0p235-RadioContainer ehkrmld2"
              data-checked="true"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                checked=""
                class="cache-1ghsgz8-RadioInput ehkrmld3"
                id="radio-value-1-value-1"
                name="radio-value-1"
                type="radio"
                value="value-1"
              />
              <svg
                class="cache-1dyk1l0-Ring ehkrmld4"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="cache-ivayk3-RadioMark ehkrmld5"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="cache-shj57p-StyledLabel ehkrmld1"
                for="radio-value-1-value-1"
              >
                Radio 1
              </label>
            </div>
          </div>
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              aria-disabled="false"
              class="cache-r0p235-RadioContainer ehkrmld2"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="cache-1ghsgz8-RadioInput ehkrmld3"
                id="radio-value-2-value-2"
                name="radio-value-2"
                type="radio"
                value="value-2"
              />
              <svg
                class="cache-1dyk1l0-Ring ehkrmld4"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="cache-ivayk3-RadioMark ehkrmld5"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="cache-shj57p-StyledLabel ehkrmld1"
                for="radio-value-2-value-2"
              >
                Radio 2
              </label>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`RadioGroup renders correctly with direction row 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-4lkpn5-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-r0p235-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-r0p235-RadioContainer[aria-disabled='false'],
.cache-r0p235-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-r0p235-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-r0p235-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-r0p235-RadioContainer[aria-disabled='true']>label,
.cache-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.cache-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="cache-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="cache-103llo5-FieldSet e15shfap1"
    >
      <div
        class="cache-oey408-Stack ehpbis70"
      >
        <legend
          class="cache-zvclys-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="cache-4lkpn5-Stack ehpbis70"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              aria-disabled="false"
              class="cache-r0p235-RadioContainer ehkrmld2"
              data-checked="true"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                checked=""
                class="cache-1ghsgz8-RadioInput ehkrmld3"
                id="radio-value-1-value-1"
                name="radio-value-1"
                type="radio"
                value="value-1"
              />
              <svg
                class="cache-1dyk1l0-Ring ehkrmld4"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="cache-ivayk3-RadioMark ehkrmld5"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="cache-shj57p-StyledLabel ehkrmld1"
                for="radio-value-1-value-1"
              >
                Radio 1
              </label>
            </div>
          </div>
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              aria-disabled="false"
              class="cache-r0p235-RadioContainer ehkrmld2"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="cache-1ghsgz8-RadioInput ehkrmld3"
                id="radio-value-2-value-2"
                name="radio-value-2"
                type="radio"
                value="value-2"
              />
              <svg
                class="cache-1dyk1l0-Ring ehkrmld4"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="cache-ivayk3-RadioMark ehkrmld5"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="cache-shj57p-StyledLabel ehkrmld1"
                for="radio-value-2-value-2"
              >
                Radio 2
              </label>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`RadioGroup renders correctly with error content 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-r0p235-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-r0p235-RadioContainer[aria-disabled='false'],
.cache-r0p235-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-r0p235-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-r0p235-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-r0p235-RadioContainer[aria-disabled='true']>label,
.cache-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.cache-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-ce8hur-StyledText {
  color: #b3144d;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="cache-103llo5-FieldSet e15shfap1"
    >
      <div
        class="cache-oey408-Stack ehpbis70"
      >
        <legend
          class="cache-zvclys-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="cache-gw33n2-Stack ehpbis70"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              aria-disabled="false"
              class="cache-r0p235-RadioContainer ehkrmld2"
              data-checked="true"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                checked=""
                class="cache-1ghsgz8-RadioInput ehkrmld3"
                id="radio-value-1-value-1"
                name="radio-value-1"
                type="radio"
                value="value-1"
              />
              <svg
                class="cache-1dyk1l0-Ring ehkrmld4"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="cache-ivayk3-RadioMark ehkrmld5"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="cache-shj57p-StyledLabel ehkrmld1"
                for="radio-value-1-value-1"
              >
                Radio 1
              </label>
            </div>
          </div>
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              aria-disabled="false"
              class="cache-r0p235-RadioContainer ehkrmld2"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="cache-1ghsgz8-RadioInput ehkrmld3"
                id="radio-value-2-value-2"
                name="radio-value-2"
                type="radio"
                value="value-2"
              />
              <svg
                class="cache-1dyk1l0-Ring ehkrmld4"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="cache-ivayk3-RadioMark ehkrmld5"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="cache-shj57p-StyledLabel ehkrmld1"
                for="radio-value-2-value-2"
              >
                Radio 2
              </label>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <p
      class="cache-ce8hur-StyledText e13y3mga0"
    >
      Eror content
    </p>
  </div>
</DocumentFragment>
`;

exports[`RadioGroup renders correctly with helper content 1`] = `
<DocumentFragment>
  .cache-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.cache-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-r0p235-RadioContainer {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-r0p235-RadioContainer[aria-disabled='false'],
.cache-r0p235-RadioContainer[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-r0p235-RadioContainer[aria-disabled='true'][data-checked='false'] {
  color: #b5b7bd;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3+.ehkrmld4 .ehkrmld6 {
  fill: #e5dbfd;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 {
  fill: #b3144d;
}

.cache-r0p235-RadioContainer:hover[aria-disabled='false'] .ehkrmld3[aria-invalid='true']+.ehkrmld4 .ehkrmld6 {
  fill: #ffd3e3;
}

.cache-r0p235-RadioContainer[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-r0p235-RadioContainer[aria-disabled='true']>label,
.cache-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld3 {
  cursor: not-allowed;
}

.cache-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-r0p235-RadioContainer[aria-disabled='true'] .ehkrmld4 .ehkrmld6 {
  fill: #f3f3f4;
}

.cache-1ghsgz8-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1ghsgz8-RadioInput+.ehkrmld4 .ehkrmld5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1ghsgz8-RadioInput:checked+svg .ehkrmld5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1ghsgz8-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld4 {
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld4 {
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:active+.ehkrmld4 .ehkrmld6 {
  fill: #f1eefc;
}

.cache-1ghsgz8-RadioInput[aria-disabled='false']:focus-visible+.ehkrmld4 {
  outline: -webkit-focus-ring-color auto 1px;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1ghsgz8-RadioInput[aria-invalid='true']:focus+.ehkrmld4 .ehkrmld6 {
  fill: #ffebf2;
}

.cache-1dyk1l0-Ring {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-1dyk1l0-Ring .ehkrmld6 {
  fill: #ffffff;
}

.cache-shj57p-StyledLabel {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-3l2mjz-StyledText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="cache-103llo5-FieldSet e15shfap1"
    >
      <div
        class="cache-oey408-Stack ehpbis70"
      >
        <legend
          class="cache-zvclys-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="cache-gw33n2-Stack ehpbis70"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              aria-disabled="false"
              class="cache-r0p235-RadioContainer ehkrmld2"
              data-checked="true"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                checked=""
                class="cache-1ghsgz8-RadioInput ehkrmld3"
                id="radio-value-1-value-1"
                name="radio-value-1"
                type="radio"
                value="value-1"
              />
              <svg
                class="cache-1dyk1l0-Ring ehkrmld4"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="cache-ivayk3-RadioMark ehkrmld5"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="cache-shj57p-StyledLabel ehkrmld1"
                for="radio-value-1-value-1"
              >
                Radio 1
              </label>
            </div>
          </div>
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              aria-disabled="false"
              class="cache-r0p235-RadioContainer ehkrmld2"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="cache-1ghsgz8-RadioInput ehkrmld3"
                id="radio-value-2-value-2"
                name="radio-value-2"
                type="radio"
                value="value-2"
              />
              <svg
                class="cache-1dyk1l0-Ring ehkrmld4"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="cache-1niv4ql-InnerCircleRing ehkrmld6"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="cache-ivayk3-RadioMark ehkrmld5"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="cache-shj57p-StyledLabel ehkrmld1"
                for="radio-value-2-value-2"
              >
                Radio 2
              </label>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <p
      class="cache-3l2mjz-StyledText e13y3mga0"
    >
      Helper content
    </p>
  </div>
</DocumentFragment>
`;
